--- a/micro-java/pom.xml
+++ b/micro-java/pom.xml
@@ -106,6 +106,11 @@
         </configuration>
       </plugin>
       <!-- Adding the jkube plugin configuration here -->
+      <plugin>
+	      <groupId>org.eclipse.jkube</groupId>
+	      <artifactId>openshift-maven-plugin</artifactId>
+	      <version>1.2.0</version>
+      </plugin>
     </plugins>
   </build>
   <profiles>
@@ -140,6 +145,7 @@
         </plugins>
       </build>
       <properties>
+	      <jkube.build.switchToDeployment>true</jkube.build.switchToDeployment>
         <quarkus.package.type>native</quarkus.package.type>
       </properties>
     </profile>
